# agent-neo

./: .gitignore  README.md  pyproject.toml  test_direct_provider.py  test_gateway.py
docs/: ASSESSMENT_REPORT.md  DIRECT_PROVIDER_PLAN.md  GATEWAY_TEST_SESSION.md  HAILO_SERVER.md  REQUIREMENTS.md  SLACK_INTEGRATION.md  STEERING.md  STRANDS_INTEGRATION.md
src/agent_neo/: __init__.py  agent.py  config.py  main.py  provider.py  strands_agent.py  tools.py
src/agent_neo/models/: __init__.py  hailo.py
